Separate annotation for selection and filtered properties for tables.